layout issues fixed

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,12 @@ body{
     height: 500px;
     background-color: white;
     border-radius: 10px;
+    padding-left: 5px;
     padding-top: 15px;
     margin: 10px auto;
     border: 1px black solid;
     box-shadow: 10px 5px 5px black;
+    text-align: left;
 }
 
 #add-item-button{
